finalWorkingCopy